// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrlFormatEditor should render label template help 1`] = `
<Fragment>
  <InjectIntl(LabelTemplateFlyout)
    isVisible={true}
    onClose={[Function]}
  />
  <InjectIntl(UrlTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Type"
        id="common.ui.fieldEditor.url.typeLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiSelect
      compressed={false}
      data-test-subj="urlEditorType"
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <ForwardRef
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="URL template help"
          id="common.ui.fieldEditor.url.template.helpLinkText"
          values={Object {}}
        />
      </ForwardRef>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="URL template"
        id="common.ui.fieldEditor.url.urlTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorUrlTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <ForwardRef
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Label template help"
          id="common.ui.fieldEditor.url.labelTemplateHelpText"
          values={Object {}}
        />
      </ForwardRef>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Label template"
        id="common.ui.fieldEditor.url.labelTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorLabelTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <InjectIntl(FormatEditorSamplesComponent)
    sampleType="html"
    samples={Array []}
  />
</Fragment>
`;

exports[`UrlFormatEditor should render normally 1`] = `
<Fragment>
  <InjectIntl(LabelTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <InjectIntl(UrlTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Type"
        id="common.ui.fieldEditor.url.typeLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiSelect
      compressed={false}
      data-test-subj="urlEditorType"
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <ForwardRef
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="URL template help"
          id="common.ui.fieldEditor.url.template.helpLinkText"
          values={Object {}}
        />
      </ForwardRef>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="URL template"
        id="common.ui.fieldEditor.url.urlTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorUrlTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <ForwardRef
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Label template help"
          id="common.ui.fieldEditor.url.labelTemplateHelpText"
          values={Object {}}
        />
      </ForwardRef>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Label template"
        id="common.ui.fieldEditor.url.labelTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorLabelTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <InjectIntl(FormatEditorSamplesComponent)
    sampleType="html"
    samples={Array []}
  />
</Fragment>
`;

exports[`UrlFormatEditor should render url template help 1`] = `
<Fragment>
  <InjectIntl(LabelTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <InjectIntl(UrlTemplateFlyout)
    isVisible={true}
    onClose={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Type"
        id="common.ui.fieldEditor.url.typeLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiSelect
      compressed={false}
      data-test-subj="urlEditorType"
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <ForwardRef
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="URL template help"
          id="common.ui.fieldEditor.url.template.helpLinkText"
          values={Object {}}
        />
      </ForwardRef>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="URL template"
        id="common.ui.fieldEditor.url.urlTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorUrlTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <ForwardRef
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Label template help"
          id="common.ui.fieldEditor.url.labelTemplateHelpText"
          values={Object {}}
        />
      </ForwardRef>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Label template"
        id="common.ui.fieldEditor.url.labelTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorLabelTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <InjectIntl(FormatEditorSamplesComponent)
    sampleType="html"
    samples={Array []}
  />
</Fragment>
`;
